Update index.html: Added news items for personal website versions 1.0, 2.0, and 3.0; corrected typos; improved project technology tags for clarity.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Dec 2024</div>
                                     <div class="news-content">
+                                        <p>Personal Website Version 3.0 online.</p>
                                         <p>Successfully pass the Mid-term Group Project Defense of the Red Bird M.Phil Program.</p>
                                         <p>Long Research Paper: <a href="https://arxiv.org/pdf/2412.17068">
                                             A Plug-and-Play Natural Language Rewriter for Natural Language to SQL</a> 
@@ -115,13 +116,16 @@
                                         <p>The Survey of HKUST(GZ)-DIAL NL2SQL Research Group: 
                                             <a href="https://arxiv.org/pdf/2408.05109">
                                             A Survey of NL2SQL with Large Language Models: Where are we, and where are we going</a> 
-                                            is available on Arxiv.</p>
+                                            is available on Arxiv.
+                                        </p>
+                                        <p>Personal Website Version 2.0 online.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
                                     <div class="news-date">Jan 2024</div>
                                     <div class="news-content">
-                                        Successfliy pass the PQA of the Red Bird M.Phil Program.
+                                        <p>Successfliy pass the PQA of the Red Bird M.Phil Program.</p>
+                                        <p>Personal Website Version 1.0 online.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
@@ -265,7 +269,7 @@
                                             <span class="author">Xinyu Liu</span>,
                                             <span class="author">Shuyu Shen</span>,
                                             <span class="author">Boyan Li</span>,
-                                            <span class="author">Peixian Ma</span>
+                                            <span class="author">Peixian Ma</span>,
                                             <span class="author">Runzhi Jiang</span>,
                                             <span class="author">Nan Tang</span>,
                                             <span class="author">Yuyu Luo</span>
@@ -450,9 +454,10 @@
                                         An interactive text adventure game based on a time loop mechanism. Players must solve puzzles, engage in conversations, and save their fellow student within a limited time frame.
                                     </p>
                                     <div class="project-tech">
-                                        <span class="tech-tag">HCI</span>
-                                        <span class="tech-tag">LLM-base Agent</span>
-                                        <span class="tech-tag">Game</span>
+                                        <span class="tech-tag">Human-Computer Interaction</span>
+                                        <span class="tech-tag">LLM-based Agent</span>
+                                        <span class="tech-tag">Storytelling Game</span>
+                                        <span class="tech-tag">Role-Playing</span>
                                     </div>
                                 </div>
 
@@ -470,14 +475,14 @@
                                     </p>
                                     <div class="project-tech">
                                         <span class="tech-tag">Python</span>
-                                        <span class="tech-tag">PyTorch</span>
+                                        <span class="tech-tag">Machine Learning</span>
                                         <span class="tech-tag">Scikit-learn</span>
                                     </div>
                                 </div>
 
                                 <div class="project-item">
                                     <div class="project-header">
-                                        <h4 class="project-name">NL2SQL_Handbook</h4>
+                                        <h4 class="project-name">NL2SQL Handbook</h4>
                                         <div class="project-links">
                                             <a href="https://github.com/HKUSTDial/NL2SQL_Handbook" class="project-link">
                                                 <i class="fab fa-github"></i>
@@ -488,8 +493,8 @@
                                         A comprehensive handbook for Natural Language to SQL (NL2SQL) research, including papers, datasets, and benchmarks.
                                     </p>
                                     <div class="project-tech">
-                                        <span class="tech-tag">LLM</span>
-                                        <span class="tech-tag">NL2SQL</span>
+                                        <span class="tech-tag">Natural Language to SQL</span>
+                                        <span class="tech-tag">Large Language Models</span>
                                         <span class="tech-tag">Survey</span>
                                     </div>
                                 </div>
