--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav class="navbar">
         <div class="nav-content">
             <div class="nav-left">
-                <a href="#" class="nav-brand">Academic Profile</a>
+                <a href="https://mpx0222.github.io/" class="nav-brand">Academic Profile</a>
+                <span class="version">Version 3.1</span>
             </div>
             <div class="nav-right">
                 <a href="#about">About</a>
@@ -21,6 +22,7 @@
                 <a href="#education">Education</a>
                 <a href="#publications">Publications</a>
                 <a href="#projects">Projects</a>
+                <a href="#internship">Internship</a>
                 <a href="#services">Services</a>
                 <a href="https://mpx0222.github.io/" class="nav-contact">Contact</a>
             </div>
@@ -51,7 +53,7 @@
                             <i class="fas fa-graduation-cap"></i>
                             <span>Google Scholar</span>
                         </a>
-                        <a href="https://www.linkedin.com/in/paixian-ma-0222/" class="link-item">
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="link-item">
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
@@ -62,6 +64,16 @@
                         <a href="mpx0222@qq.com" class="link-item">
                             <i class="fas fa-envelope"></i>
                             <span>Email</span>
+                        </a>
+                    </div>
+                    <div class="cv-links">
+                        <a href="cv/CV_PeixianMA_en.pdf" class="cv-link">
+                            <i class="fas fa-file-pdf"></i>
+                            <span>CV_en</span>
+                        </a>
+                        <a href="cv/CV_PeixianMA_cn.pdf" class="cv-link">
+                            <i class="fas fa-file-alt"></i>
+                            <span>CV_zh</span>
                         </a>
                     </div>
                 </div>
@@ -78,15 +90,18 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
                         <div class="card-content">
-                            <p> Hello! I am a M.Phil. student of The Hong Kong University of Science and Technology GuangZhou (HKUSTGZ). 
-                                Now I am studying in Data Science and Analytics (DSA) under the supervision of Prof. Yuyu Luo and Prof. Nan Tang, at the Information Hub (INFH).
+                            <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology GuangZhou (HKUSTGZ)</a>. 
+                                Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
+                                under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
+                                at the <a href="https://www.hkust-gz.edu.cn/zh/academics/?variant=zh-cn">Information Hub (INFH)</a>.
                                 <br><br>
-                                I have received the B.Eng. degree in Intelligence Science and Technology from Jinan University (JNU) in 2023. 
+                                I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
                                 During my undergraduate live, I started my research by working as the undergraduate research assistant in the Data-driven Intelligent Systems Laboratory of Jinan University. 
                                 My undergraduate research direction is the optimization and application of the Broad Learning System (BLS). 
                                 Before my graduation, I received the offer from HKUST(GZ) and successflily enrolled in it in the Fall 2023.
                                 <br><br>
-                                Currently, I participate in HKUST(GZ) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 呆鹅实验室 and Red Bird AI Agent Narrative Storytelling Game Groups @AASG. 
+                                Currently, I participate in HKUST(GZ) Data Intelligence and Analytics Lab <a href="https://github.com/HKUSTDial">@HKUST(GZ)-DIAL 呆鹅实验室</a> 
+                                and Red Bird AI Agent Narrative Storytelling Game Groups <a href="https://github.com/HKUSTAASG">@AASG</a>. 
                                 My research interest comprises Database Management (DBMS), Mliti-agent System (MAS), Natural Language to SQL (NL2SQL) and Open-Source BLS. </p>
                         </div>
                     </div>
@@ -100,10 +115,15 @@
                         </div>
                         <div class="card-content">
                             <div class="news-list">
+                                <!-- <div class="news-item">
+                                    <div class="news-date">Jan 2025</div>
+                                    <div class="news-content">
+                                        <p></p>
+                                    </div>
+                                </div> -->
                                 <div class="news-item">
                                     <div class="news-date">Dec 2024</div>
                                     <div class="news-content">
-                                        <p>Personal Website Version 3.0 online.</p>
                                         <p>Successfully pass the Mid-term Group Project Defense of the Red Bird M.Phil Program.</p>
                                         <p>Long Research Paper: <a href="https://arxiv.org/pdf/2412.17068">
                                             A Plug-and-Play Natural Language Rewriter for Natural Language to SQL</a> 
@@ -118,14 +138,18 @@
                                             A Survey of NL2SQL with Large Language Models: Where are we, and where are we going</a> 
                                             is available on Arxiv.
                                         </p>
-                                        <p>Personal Website Version 2.0 online.</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
                                     <div class="news-date">Jan 2024</div>
                                     <div class="news-content">
-                                        <p>Successfliy pass the PQA of the Red Bird M.Phil Program.</p>
-                                        <p>Personal Website Version 1.0 online.</p>
+                                        <p>Successfully pass the Postgraduate Qualifying Assessment of the Red Bird M.Phil Program.</p>
+                                    </div>
+                                </div>
+                                <div class="news-item">
+                                    <div class="news-date">Sep 2023</div>
+                                    <div class="news-content">
+                                        <p>Start Research Postgraduate Program in The Hong Kong University of Science and Technology (GuangZhou).</p>
                                     </div>
                                 </div>
                                 <div class="news-item">
@@ -141,7 +165,7 @@
                                 <div class="news-item">
                                     <div class="news-date">May 2023</div>
                                     <div class="news-content">
-                                        Successflily pass the undergraduate graduation defense in Jinan University.
+                                        Successfully pass the undergraduate graduation defense in Jinan University.
                                     </div>
                                 </div>
                             </div>
@@ -288,11 +312,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>12 citations</span>
+                                                    <span>13 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>268 stars</span>
+                                                    <span>276 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -335,6 +359,38 @@
                                                     <span>24 stars</span>
                                                 </span>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- Internship card -->
+                    <div id="internship" class="card">
+                        <div class="card-header" style="background: #9B59B6;">
+                            <i class="fas fa-briefcase"></i>
+                            <h2>Internship</h2>
+                            <i class="fas fa-ellipsis-h"></i>
+                        </div>
+                        <div class="card-content">
+                            <div class="internship-list">
+                                <div class="internship-item">
+                                    <div class="company-logo">
+                                        <img src="images/jnu-logo.jpg" alt="Samsung Logo">
+                                    </div>
+                                    <div class="internship-info">
+                                        <h3 class="company-name">Big Data Center, Jinan University</h3>
+                                        <p class="position">Intern for Data Mining</p>
+                                        <div class="internship-meta">
+                                            <p class="internship-period">
+                                                <i class="far fa-calendar-alt"></i>
+                                                <span>Jan 2023 - Jun 2023</span>
+                                            </p>
+                                            <p class="internship-location">
+                                                <i class="fas fa-map-marker-alt"></i>
+                                                <span>Guangzhou, China</span>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -413,7 +469,7 @@
                                         <div class="award-item">
                                             <div class="award-info">
                                                 <div class="award-header">
-                                                    <h4 class="award-name">Third Class Scholarship Excellent Student</h4>
+                                                    <h4 class="award-name">Third Class Scholarship for Excellent Student</h4>
                                                     <span class="award-tag scholarship">Scholarship</span>
                                                 </div>
                                                 <p class="award-org">Jinan University</p>
@@ -535,7 +591,7 @@
                             <div class="football-stats">
                                 <div class="career-overview">
                                     <div class="stat-box">
-                                        <span class="stat-value">52</span>
+                                        <span class="stat-value">53</span>
                                         <span class="stat-label">Appearances</span>
                                     </div>
                                     <div class="stat-box">
@@ -662,5 +718,61 @@
             </div>
         </div>
     </main>
+
+    <footer class="quote-footer">
+        <div class="quote-container">
+            <i class="fas fa-quote-left quote-icon"></i>
+            <blockquote>
+                <p class="quote-text">至于结果，只要足够认真虔诚，一定不会错的。</p>
+                <cite class="quote-author">— 2018.08.01 于广东仲元中学</cite>
+            </blockquote>
+            <i class="fas fa-quote-right quote-icon"></i>
+        </div>
+    </footer>
+
+    <div class="section-nav">
+        <div class="nav-dot" data-section="about" data-tooltip="About"></div>
+        <div class="nav-dot" data-section="news" data-tooltip="News"></div>
+        <div class="nav-dot" data-section="education" data-tooltip="Education"></div>
+        <div class="nav-dot" data-section="publications" data-tooltip="Publications"></div>
+        <div class="nav-dot" data-section="internship" data-tooltip="Internship"></div>
+        <div class="nav-dot" data-section="projects" data-tooltip="Projects"></div>
+        <div class="nav-dot" data-section="services" data-tooltip="Services"></div>
+    </div>
+
+    <script>
+    // 获取所有部分和导航点
+    const sections = document.querySelectorAll('.card');
+    const navDots = document.querySelectorAll('.nav-dot');
+
+    // 监听滚动事件
+    window.addEventListener('scroll', () => {
+        let current = '';
+        
+        sections.forEach(section => {
+            const sectionTop = section.offsetTop;
+            const sectionHeight = section.clientHeight;
+            if (pageYOffset >= (sectionTop - sectionHeight / 3)) {
+                current = section.getAttribute('id');
+            }
+        });
+
+        navDots.forEach(dot => {
+            dot.classList.remove('active');
+            if (dot.getAttribute('data-section') === current) {
+                dot.classList.add('active');
+            }
+        });
+    });
+
+    // 点击导航点滚动到对应部分
+    navDots.forEach(dot => {
+        dot.addEventListener('click', () => {
+            const targetId = dot.getAttribute('data-section');
+            const targetSection = document.getElementById(targetId);
+            targetSection.scrollIntoView({ behavior: 'smooth' });
+        });
+    });
+    </script>
 </body>
 </html> 
