--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Profile</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -24,6 +24,7 @@
                 <a href="#projects">Projects</a>
                 <a href="#internship">Internship</a>
                 <a href="#services">Services</a>
+                <a href="records.html" class="nav-records">Records</a>
                 <a href="https://mpx0222.github.io/" class="nav-contact">Contact</a>
             </div>
         </div>
