Update index.html to include favicon and manifest links; change Records page link to new directory structure. Remove records.html file and enhance styles.css with new animations for smoother transitions.

--- a/pages/records.html
+++ b/pages/records.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Records - Peixian MA</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/records.css">
+    <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-192x192.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-512x512.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+    <link rel="manifest" href="/assets/img/site.webmanifest">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/records.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,12 +18,12 @@
     <nav class="navbar">
         <div class="nav-content">
             <div class="nav-left">
-                <a href="index.html" class="nav-brand">Academic Profile</a>
+                <a href="../index.html" class="nav-brand">Academic Profile</a>
                 <span class="version">Version 3.1</span>
             </div>
             <div class="nav-right">
-                <a href="index.html">Home</a>
-                <a href="records.html" class="active">Records</a>
+                <a href="../index.html">Home</a>
+                <a href="../pages/records.html" class="active">Records</a>
                 <a href="https://mpx0222.github.io/" class="nav-contact">Contact</a>
             </div>
         </div>
@@ -69,7 +73,7 @@
                 
                 <div class="records-list">
                     <!-- 示例记录项 -->
-                    <a href="posts/summer-days.html" class="record-link-wrapper">
+                    <a href="../posts/summer-days.html" class="record-link-wrapper">
                         <article class="record-item" data-categories="life">
                             <div class="record-date">2024-03-15</div>
                             <div class="record-content">
