--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic Profile</title>
+    <title>Personal Page | Peixian MA</title>
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-192x192.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-512x512.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
@@ -18,15 +18,16 @@
         <div class="nav-content">
             <div class="nav-left">
                 <a href="https://mpx0222.github.io/" class="nav-brand">Academic Profile</a>
-                <span class="version">Version 3.1</span>
+                <span class="version">Version 3.2</span>
             </div>
             <div class="nav-right">
                 <a href="#about">About</a>
                 <a href="#news">News</a>
                 <a href="#education">Education</a>
                 <a href="#publications">Publications</a>
-                <a href="#projects">Projects</a>
                 <a href="#internship">Internship</a>
+                <a href="#awards">Awards</a>
+                <a href="#projects">Projects</a>
                 <a href="#services">Services</a>
                 <a href="pages/records.html" class="nav-records">Records</a>
                 <a href="https://mpx0222.github.io/" class="nav-contact">Contact</a>
@@ -44,7 +45,7 @@
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
-                    <p class="profile-title">M.Phil Student, HKUSTGZ</p>
+                    <p class="profile-title">M.Phil Student, HKUST(GZ)<br>Intern, IDEA</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
@@ -72,11 +73,11 @@
                         </a>
                     </div>
                     <div class="cv-links">
-                        <a href="cv/CV_PeixianMA_en.pdf" class="cv-link">
+                        <a href="files/cv/CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
                             <i class="fas fa-file-pdf"></i>
                             <span>CV_en</span>
                         </a>
-                        <a href="cv/CV_PeixianMA_cn.pdf" class="cv-link">
+                        <a href="files/cv/CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
                             <i class="fas fa-file-alt"></i>
                             <span>CV_zh</span>
                         </a>
@@ -120,12 +121,12 @@
                         </div>
                         <div class="card-content">
                             <div class="news-list">
-                                <!-- <div class="news-item">
+                                <div class="news-item">
                                     <div class="news-date">Jan 2025</div>
                                     <div class="news-content">
-                                        <p></p>
+                                        <p>Start a new internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="news-item">
                                     <div class="news-date">Dec 2024</div>
                                     <div class="news-content">
@@ -200,6 +201,7 @@
                                                 <span>2023.09 - 2025.08 (Expected)</span>
                                             </p>
                                             <p class="education-period">
+                                                <i class="fas fa-map-marker-alt"></i>
                                                 <span>Guangzhou Campus, Information Hub (INFH)</span>
                                             </p>
                                             <p class="education-period">
@@ -223,6 +225,7 @@
                                                 <span>2019.09 - 2023.06</span>
                                             </p>
                                             <p class="education-period">
+                                                <i class="fas fa-map-marker-alt"></i>
                                                 <span>South Campus, School of Information Science and Engineering (IST)</span>
                                             </p>
                                             <p class="education-period">
@@ -258,12 +261,13 @@
                                             <span class="author">Peixian Ma</span>,
                                             <span class="author">Boyan Li</span>,
                                             <span class="author">Runzhi Jiang</span>,
+                                            <span class="author">Ju Fan</span>,
                                             <span class="author">Nan Tang</span>,
                                             <span class="author">Yuyu Luo</span>
                                         </p>
                                         <p class="publication-venue">
                                             <span class="venue-name">Arxiv</span> |
-                                            <span class="venue-type">Preprint</span>
+                                            <span class="venue-type">Preprint (Under Review)</span>
                                         </p>
                                         <div class="publication-footer">
                                             <div class="publication-links">
@@ -300,6 +304,9 @@
                                             <span class="author">Boyan Li</span>,
                                             <span class="author">Peixian Ma</span>,
                                             <span class="author">Runzhi Jiang</span>,
+                                            <span class="author">Yuxin Zhang</span>,
+                                            <span class="author">Ju Fan</span>,
+                                            <span class="author">Guoliang Li</span>,
                                             <span class="author">Nan Tang</span>,
                                             <span class="author">Yuyu Luo</span>
                                         </p>
@@ -317,11 +324,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>13 citations</span>
+                                                    <span>16 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>276 stars</span>
+                                                    <span>330 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -382,19 +389,44 @@
                             <div class="internship-list">
                                 <div class="internship-item">
                                     <div class="company-logo">
-                                        <img src="images/jnu-logo.jpg" alt="Samsung Logo">
+                                        <img src="images/idea_logo.png" alt="Samsung Logo">
                                     </div>
                                     <div class="internship-info">
-                                        <h3 class="company-name">Big Data Center, Jinan University</h3>
-                                        <p class="position">Intern for Data Mining</p>
+                                        <h3 class="company-name">International Digital Economy Academy (IDEA)</h3>
+                                        <p class="position">Intern for Large Language Model Development, FinAI Lab </p>
                                         <div class="internship-meta">
                                             <p class="internship-period">
                                                 <i class="far fa-calendar-alt"></i>
-                                                <span>Jan 2023 - Jun 2023</span>
+                                                <span>2025.01 - 2025.06</span>
                                             </p>
                                             <p class="internship-location">
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <span>Guangzhou, China</span>
+                                                <span>Futian District, Shenzhen, China</span>
+                                            </p>
+                                            <p class="internship-location">
+                                                <span>Duties: Development of Financial Large Language Models, Model Fine-tuning</span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="internship-item">
+                                    <div class="company-logo">
+                                        <img src="images/jnu-logo.jpg" alt="Samsung Logo">
+                                    </div>
+                                    <div class="internship-info">
+                                        <h3 class="company-name">Jinan University Big Data Center</h3>
+                                        <p class="position">Intern for Data Mining and Analysis</p>
+                                        <div class="internship-meta">
+                                            <p class="internship-period">
+                                                <i class="far fa-calendar-alt"></i>
+                                                <span>2023.01 - 2023.06</span>
+                                            </p>
+                                            <p class="internship-location">
+                                                <i class="fas fa-map-marker-alt"></i>
+                                                <span>Panyu District, Guangzhou, China</span>
+                                            </p>
+                                            <p class="internship-location">
+                                                <span>Duties: Data Mining, Data Analysis, Data Visualization</span>
                                             </p>
                                         </div>
                                     </div>
@@ -404,7 +436,7 @@
                     </div>
 
                     <!-- Awards card -->
-                    <div class="card">
+                    <div id="awards" class="card">
                         <div class="card-header" style="background: #B2EBF2;">
                             <i class="fas fa-award"></i>
                             <h2>Awards</h2>
@@ -504,6 +536,25 @@
                             <div class="projects-list">
                                 <div class="project-item">
                                     <div class="project-header">
+                                        <h4 class="project-name">Friday Agent</h4>
+                                        <div class="project-links">
+                                            <a href="" class="project-link">
+                                                <i class="fab fa-github"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <p class="project-description">
+                                        A Plug-and-Play Customized AI Agent Assistant for the Full Scene of Personal Life
+                                    </p>
+                                    <div class="project-tech">
+                                        <span class="tech-tag">Large Language Models</span>
+                                        <span class="tech-tag">AI Agent</span>
+                                        <span class="tech-tag">Personal Life</span>
+                                    </div>
+                                </div>
+
+                                <div class="project-item">
+                                    <div class="project-header">
                                         <h4 class="project-name">Sharp School: A Narrative Storytelling Game with Large Language Models</h4>
                                         <div class="project-links">
                                             <a href="https://github.com/MPX0222/BroadLearningSystemTools-2.0" class="project-link">
@@ -538,25 +589,6 @@
                                         <span class="tech-tag">Python</span>
                                         <span class="tech-tag">Machine Learning</span>
                                         <span class="tech-tag">Scikit-learn</span>
-                                    </div>
-                                </div>
-
-                                <div class="project-item">
-                                    <div class="project-header">
-                                        <h4 class="project-name">NL2SQL Handbook</h4>
-                                        <div class="project-links">
-                                            <a href="https://github.com/HKUSTDial/NL2SQL_Handbook" class="project-link">
-                                                <i class="fab fa-github"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <p class="project-description">
-                                        A comprehensive handbook for Natural Language to SQL (NL2SQL) research, including papers, datasets, and benchmarks.
-                                    </p>
-                                    <div class="project-tech">
-                                        <span class="tech-tag">Natural Language to SQL</span>
-                                        <span class="tech-tag">Large Language Models</span>
-                                        <span class="tech-tag">Survey</span>
                                     </div>
                                 </div>
                             </div>
